# Skills-Verified

./: .gitignore  AGENTS.md  ARCH.md  Dockerfile  PROCESS.md  README.md  SALE.md  UPDATE.md  action.yml  docker-compose.yml  pyproject.toml  report-viewer.html  sync_ai_security_fabric.md
data/: campaign_signatures.yaml  exfiltration_patterns.yaml  obfuscation_signatures.yaml  semgrep-python.yml  semgrep-security-audit.yml
examples/: README.md
examples/github-actions/: basic.yml  full.yml  monorepo.yml
examples/gitlab-ci/: basic.yml  full.yml  monorepo.yml
templates/: gitlab-ci-skills-verified.yml
tests/: conftest.py  test_agent_skills_profile.py  test_aibom_analyzer.py  test_aibom_export.py  test_analysis_scope.py  test_analyzer_diagnostics.py  test_bandit_analyzer.py  test_behavioral_analyzer.py  test_cli.py  test_code_reduce.py  test_codeclimate.py  test_config_injection_analyzer.py  test_console_output.py  test_container_analyzer.py  test_contract_security.py  test_cve_analyzer.py  test_dns_worker.py  test_exfiltration_analyzer.py  test_fetcher.py  test_github_annotations.py  test_guardrails_analyzer.py  test_integration.py  test_json_report.py  test_known_threats_analyzer.py  test_llm_analyzer.py  test_llm_verifier.py  test_llm_worker.py  test_markdown_report.py  test_mcp_analyzer.py  test_mcp_server.py  test_metadata_analyzer.py  test_model_risk.py  test_models.py  test_obfuscation_analyzer.py  test_pattern_analyzer.py  test_permissions_analyzer.py  test_pipeline.py  test_platform_detector.py  test_platform_parse_diagnostics.py  test_policy_engine.py  (+11 more)
(+199 files in other folders)
