[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-verified"
version = "0.2.0"
description = "Policy-free security analyzer for AI agent skills"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.2.2",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
scanners = [
    "bandit==1.9.4",
    "semgrep==1.169.0",
    "shellcheck-py==0.11.0.1",
]
dev = ["jsonschema>=4.23", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
skills-verified = "skills_verified.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["E401", "E402", "F401"]

[tool.hatch.build.targets.wheel]
packages = ["src/skills_verified"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "skills_verified/data/rules"
